<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="mus2.locationbasedreminder.MainActivity" >

    <item android:id="@+id/action_add"
          android:icon="@drawable/btn_add"
          android:title="@string/action_add"
          android:showAsAction="always" />
    
    <item android:id="@+id/action_save"
          android:icon="@drawable/btn_save"
          android:title="@string/action_save"
          android:showAsAction="always" />
    
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        android:showAsAction="never"/>
    
    <item android:id="@+id/action_cancel_service" 
        android:orderInCategory="1000" 
        android:title="@string/action_cancel_service"
        android:showAsAction="never"></item>

    <item android:id="@+id/action_start_service" 
        android:orderInCategory="1100" 
        android:title="@string/action_start_service"
        android:showAsAction="never"></item>
    
      <item android:id="@+id/action_location_settings" 
        android:orderInCategory="1200" 
        android:title="@string/action_location_settings"
        android:showAsAction="never"></item>
</menu>
